--- a/Clase 3 - Tidyverse - Tasas basicas/Clase 3 - Bases de Datos y Mercado de Trabajo.Rmd
+++ b/Clase 3 - Tidyverse - Tasas basicas/Clase 3 - Bases de Datos y Mercado de Trabajo.Rmd
@@ -48,12 +48,11 @@ Aglom <- read.xlsx("../Fuentes/Aglomerados EPH.xlsx")
 ```
 
 
-Para mostrar el funcionamiento básico de tydyverse, crearemos un pequeño subset de datos de la base Individual de la EPH. A partir del lenguaje base, especificaremos conservar las primeras 5000 filas, y una serie de variables de interés, tales como los Códigos identificadorios de las vivindas, hogares y componentes, así como las variables de sexo, edad, y la ponderación.
+Para mostrar el funcionamiento básico de tydyverse, crearemos un pequeño subset de datos de la base Individual de la EPH. A partir del lenguaje base, especificaremos conservar las primeras 5000 filas, y una serie de variables de interés, tales como el código identificador del aglomerado, sexo, edad, y ponderación de cada registro.
 ```{r}
 Datos  <- Individual_t117[1:5000,
-                          c("CODUSU","NRO_HOGAR",
-                                  "COMPONENTE","AGLOMERADO","CH04","CH06","PONDERA")]
-
+                          c("AGLOMERADO","CH04","CH06","PONDERA")]
+Datos
 ```
 Téngase en cuenta que los resultados de estos ejercicios no serán representativos dado que se trata de un recorte de la base.
 
@@ -118,7 +117,7 @@ Datos
 Permite especificar la serie de columnas que se desea conservar de un DataFrame. También pueden especificarse las columnas que se desean descartar (agregándoles un _-_). Muy útil para agilizar el trabajo en bases de datos de gran tamaño.
 ```{r}
 Datos %>% 
-  select(CODUSU,PONDERA)
+  select(CH04,PONDERA)
 
 
 Datos %>% 
@@ -155,7 +154,6 @@ Veamos un ejemplo con multiples encadenamietnos
 ```{r}
 Encadenado <- Datos %>% 
   filter(Grupos_Etarios == "Adultos") %>% 
-  rename(Codigo = CODUSU) %>% 
   mutate(Sexo = case_when(CH04 == 1 ~ "Varon",
                           CH04 == 2 ~ "Mujer")) %>% 
   select(-Edad_Cuadrado)
@@ -275,7 +273,7 @@ Nótese que en este caso, para poder añadir el %, la función transforma a la v
 Como vieramos en la clase 1, la función __write.xlsx__ de la libreria _openxlsx_ nos permite exportar los dos dataframes a un mismo archivo. Cabe aclarar que existen numerosas funciones y librerías alternativas para exportar resultados a un excel. En este caso, optamos por _openxlsx_ ya que resulta una de las más sencillas para exportar rapidamente los resultados. Otras librerías permiten también dar formato a las tablas que se exportan, definir si deseamos sobreescribir archivos en caso de que ya existan, etc. 
 
 ```{r eval=FALSE, warining = FALSE}
-Lista_a_exportar <- list("Tasa de Empleo" = Empleo,
+Lista_a_exportar <- list("Tasa de Empleo"  = Empleo,
                          "Poblacion Aglos" = Poblacion_Aglomerados)
 
 write.xlsx(Lista_a_exportar,"../Resultados/Informe Mercado de Trabajo.xlsx")
