--- a/Clase 2 - R Base/Clase 2 - Presentacion de R.Rmd
+++ b/Clase 2 - R Base/Clase 2 - Presentacion de R.Rmd
@@ -21,23 +21,47 @@ class: middle, center
 ---
 class: middle, center, inverse
 
-background-image: url(https://raw.githubusercontent.com/Guidowe/Curso-R-Flacso/master/Clase%202%20-%20R%20Base/r_miedo.jpg)
+background-image: url(img/r_miedo.jpg)
 background-size: contain
+
+---
+class: inverse, center
+
+# R es...
+ 
+Libre (con licencia no paga)
+
+```{r echo=FALSE, out.width = '80%', fig.align = 'center'}
+knitr::include_graphics("img/softwarelibre.png") 
+```
+
+---
+class: inverse, center
+
+# R es...
+
+Abierto
+
+```{r echo=FALSE, out.width = '80%', fig.align = 'center'}
+knitr::include_graphics("img/r_software_abierto.jpg")
+```
 
 ---
 class: inverse
 
 # R es...
+<br>
 
-<br><br><br><br>
-  
-- Un software libre y abierto
-  
 - Un lenguaje para el procesamiento y análisis de datos
   
-- Su sintáxis básica es conocida como "R base"
+<br>
   
-- Sobre esa base se desarrollan un conjunto de funciones y paquetes que incluso pueden cambiar ciertas formas de programar el código
+- El lenguaje troncal es conocido como "R base"
+  
+<br>
+  
+- Sobre esa base se desarrollan un conjunto de funciones y paquetes que incluso pueden cambiar ciertas formas de programar el mismo lenguaje
+  
   
 ---
 class: middle, center, inverse
@@ -81,13 +105,51 @@ class: inverse
 
 ## ¿Por qué R?
 
+<br><br>
 
-- Con el ambiente de trabajo RStudio se pueden tratar los datos, visualizar los resultados, analizarlos y presentarlos
+- Permite sistematizar tareas repetitivas
+
+<br>
+
+--
+
+- Permite crear funciones a medida
+
+<br>
+
+--
+
+- Garantiza la reproductibilidad y la estandarización de procesos
+
+<br>
+
+--
+
+- Destina más memoria al funcionamiento que a la plataforma (vs SPSS o SAS, por ejemplo)
+
+<br>
+
+---
+class: inverse
+
+## ¿Por qué R?
 
 - Su comunidad potencia la capacidad de consulta y respuesta
 
-```{r echo=FALSE, out.width = '60%', fig.align = 'center'}
+
+```{r echo=FALSE, out.width = '70%', fig.align = 'center'}
 knitr::include_graphics("img/r_ayuda.png")
+```
+
+---
+class: inverse
+
+## ¿Por qué R?
+
+- Consultas sobre los programas estadísticos en Google
+  
+```{r echo=FALSE, out.width = '100%', fig.align = 'center'}
+knitr::include_graphics("img/google_trend.png") 
 ```
 
 ---
@@ -97,47 +159,39 @@ class: inverse
 
 - Sus gráficos son flexibles y con calidad de publicación
 
-.pull-left[
-![](img/grafico_ingresos.jpg)]
+```{r echo=FALSE, out.width = '90%', fig.align = 'center'}
+knitr::include_graphics("img/grafico_ingresos.jpg")
+```
 
-.pull-right[
-![](img/grafico_cap_inst.png)]
+---
+class: inverse
 
+## ¿Por qué R?
+
+```{r echo=FALSE, out.width = '60%', fig.align = 'center'}
+knitr::include_graphics("img/grafico_cap_inst.png")
+```
 
 ---
 class: inverse
 
 ## ¿Por qué R?
   
-- Su potencia aumenta significativamente a medida que usuarixs, investigadorxs, institutos, organizaciones y empresas privadas "crean" y, sobre todo, publican funciones específicas para problemas particulares.
-  
 - Para el año 2019 se publicaron más de 16.000 paquetes "oficiales" en CRAN
 
-```{r echo=FALSE, out.width = '80%', fig.align = 'center'}
+```{r echo=FALSE, out.width = '110%', fig.align = 'center'}
 knitr::include_graphics("https://gist.githubusercontent.com/daroczig/3cf06d6db4be2bbe3368/raw/b66b0531fb1b86d3e04a003b2e105ad4f147900e/number-of-submitted-packages-to-CRAN.png") 
 ```
   fuente: [Gergely Daróczi](https://blog.revolutionanalytics.com/2017/01/cran-10000.html)
 
----
-class: inverse
-
-## ¿Por qué R?
-
-
-- Consultas sobre los programas estadísticos en Google
-  
-```{r echo=FALSE, out.width = '100%', fig.align = 'center'}
-knitr::include_graphics("img/google_trend.png") 
-```
-
 
 ---
 
 class: inverse
 
-## R vs SPSS / STATA / SAS
+## R vs otros programas de licencia paga
 
-- R Es gratuito 
+- R Es gratuito (todas sus versiones, todas sus herramientas, todo el tiempo)
 
 --
 
@@ -145,7 +199,7 @@ class: inverse
 
 --
   
-- En STATA/ SPSS / SAS trabajas con lo disponible, en R podés crear herramientas en función de los problemas con los que te enfrentas
+- Con R se generó una comunidad dedicada a facilitar el acceso al lenguaje y, también, a su desarrollo (los "mortales" podemos crear herramientas en función de los problemas con los que nos enfrentamos).
 
 --
   
@@ -154,55 +208,58 @@ class: inverse
 --
   
 - Potencia: 
-    * Trabaja virtualmente
+    * no trabaja sobre objetos físicos
     * Totalmente automatizable
     * Interactua con otros lenguajes
 
 --
   
-- R te obliga a conocer más sobre tus datos, tus procesos y sobre estadística.
+- R te demanda mayor conocimiento sobre tus datos, tus procesos y también sobre estadística.
 
 ---
 class: middle, center
 
-# ¡Manos a la obra!
+# Manos a la obra
 
 ---
 class: inverse, middle
 
-  * Abramos el archivo _"curso R FLACSO"_, lo podemos identificar por el siguiente ícono <img src="img/Rproject.png" width=5%>
+## Rstudio
 
+<br>
 
+- Es el entorno más popular para trabajar con el lenguaje R.
 
-```{r echo=FALSE, out.width = '80%', fig.align = 'center'}
-knitr::include_graphics("img/abrir_proyecto.png")
-```
+<br>
+
+- Es una empresa que no cobra por el uso del programa, sí por el soporte.
+
+<br>
+
+- Es también un traductor de R a diferentes lenguajes, lo que permite trabajar el dato, visualizar los resultados y generar reportes en diferentes formatos de salida (.doc, .xlsx., .pdf, presentaciones, dashboards, entre otros.), todo desde la misma plataforma
 
 ---
-class: inverse, middle
+class: inverse, center, middle
 
-- Rstudio es uno de los entornos para utilizar el lenguaje R
- 1. Abramos la carpeta _"Clase 2 - R Base"_
+.pull-left[
+
+## R:
+
+<br>
 
 ```{r echo=FALSE, out.width = '100%', fig.align = 'center'}
-knitr::include_graphics("img/paso1.png")
+knitr::include_graphics("img/r_software_abierto.jpg")
 ```
+]
 
----
-class: inverse, middle
+.pull-right[
 
-  
-  
-  
-  1. Dentro de ella, abramos el archivo _"Clase 2 - Introducción.html"_
-  
-  1. Luego vamos a _File/Archivo --> New File/Nuevo archivo --> R Notebook_
-  
-```{r echo=FALSE, out.width = '80%', fig.align = 'center'}
-knitr::include_graphics("img/paso2.png")
+## RStudio:
+
+<br>
+
+```{r echo=FALSE, out.width = '100%', fig.align = 'center'}
+knitr::include_graphics("img/r_panel_rstudio.jpg")
 ```
-
----
-class: inverse, middle
-
+]
 
